2006-12-08  Adam Petaccia <adam@tpetaccia.com>

	* src/sj-extracting.h:
	* src/sj-play.h:
	* src/sj-prefs.h:
	Added in missing function prototypes

	* src/sj-about.c:
	* src/sj-main.c: 
	* src/sj-prefs.c:
	Actually include respective .h files

	Fixes #383879.

2006-12-07  Adam Petaccia <adam@tpetaccia.com>
	
	* src/sj-main.c:
	* src/sj-prefs.c:
	Mark some data as const (#383488)

2006-12-05  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	* data/sound-juicer.1:
	Add man file (thanks Sven Arvidsson)

2006-11-23  Luca Cavalli  <lcavalli@cvs.gnome.org>

	* src/sj-main.c: (media_removed_cb):
	Make sure we are not playing when media is removed (#378250).

2006-11-19  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.2.

2006-11-19  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Don't disable Reread when playing (#347218, Stephen Cook).

2006-10-13  Adam Petaccia <adam@tpetaccia.com>

	* src/sj-extracting.c:
	"none" shouldn't create a directory in Folder hierarchy preference
	(#374831).

2006-11-02  Ross Burton  <ross@burtonini.com>

	* src/bacon-volume.[ch]:
	Update for multi-screen and g-i-t (#369490).

2006-10-31  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add a11y relationships for the duration (#364386, Robin Sonefors)

2006-10-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fix dialog spacing (#332561, Christian Persch).

2006-10-25  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Fix dates with 0s in (#364976, Alex Lancaster).

2006-10-22  Luca Cavalli  <lcavalli@cgs.gnome.org>

	* src/sj-extracting.c: (filepath_parse_pattern):
	Replace spaces with underscores in path_patterns and file_patterns
	when "Strip special characters" is selected (#357111).

2006-10-17  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	* data/sound-juicer.desktop.in.in:
	* po/POTFILES.in:
	Rename and add version field for bug-buddy.
		
	* autogen.sh: