@@ -1,0 +1,5 @@
+Makefile.in
+Makefile
+stamp-h1
+sj-metadata-marshal.h
+sj-metadata-marshal.c
