@@ -1,3 +1,10 @@
+2006-12-20  Christian Persch  <chpe@cvs.gnome.org>
+
+	* libjuicer/.cvsignore:
+	* tests/Makefile.am:
+	Add cvsignore, and use variables instead of configure
+	substitutions in Makefile. Bug #387906.
+
 2006-12-08  Adam Petaccia <adam@tpetaccia.com>
 
 	* src/sj-extracting.h:
